k8s/api-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: myapp
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: thanh2909/simple-fullstack-docker-v3-ci-tests-api:v0.4
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
